--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ license = "MIT"
 [dependencies]
 ipc-channel = "0.13"
 serde = "1.0"
-bincode = "1.2.1"
+serde_json = "1.0"
 
 [dev-dependencies]
 compiletest_rs = { version = "0.3.16", features = ["stable"] }
