--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ license = "MIT"
 
 [dependencies]
 futures-util = "0.3"
-ipc-channel = { git = "https://github.com/foxfriends/ipc-channel.git", branch = "master", features = ["async"] }
+ipc-channel = { git = "https://github.com/foxfriends/ipc-channel", branch = "master", features = ["async"] }
 serde = "1.0"
 serde_json = "1.0"
 
